<resources>
    <!-- API Key for theMovieDb.org    Replace with your own API key for running [CHAR LIMIT=NONE] -->
    <string name="api_key" translatable="false">@string/api_key_git_ignore</string>

    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Movie Details</string>


    <!-- values for building movie query url  -->
    <string name="movie_query_url_base" translatable="false">http://api.themoviedb.org/3</string>
    <string name="movie_query_movie" translatable="false">movie</string>
    <string name="movie_query_popular" translatable="false">popular</string>
    <string name="movie_query_top_rated" translatable="false">top_rated</string>
    <string name="movie_query_key_api_key" translatable="false">api_key</string>

    <string name="movie_query_reviews" translatable="false">reviews</string>
    <string name="movie_query_trailers" translatable="false">videos</string>
    <string name="movie_query_favourites" translatable="false">favourites</string>

    <!-- values for building movie poster url  -->
    <string name="poster_url_base" translatable="false">" http://image.tmdb.org/t/p/"</string>
    <string name="poster_url_poster_size" translatable="false">w185</string>

    <!--  values for building YouTube Video URL-->
    <string name="video_query_url_base" translatable="false">http://www.youtube.com</string>
    <string name="video_query_url_watch" translatable="false">watch</string>
    <string name="video_query_key" translatable="false">v</string>

    <!-- search keys for analysing JSON data from moviedb.org-->
    <string name="movie_json_key_results" translatable="false">results</string>
    <string name="movie_json_key_title" translatable="false">title</string>
    <string name="movie_json_key_poster_path" translatable="false">poster_path</string>
    <string name="movie_json_key_original_title" translatable="false">original_title</string>
    <string name="movie_json_key_overview" translatable="false">overview</string>
    <string name="movie_json_key_vote_average" translatable="false">vote_average</string>
    <string name="movie_json_key_release_date" translatable="false">release_date</string>
    <string name="movie_json_key_api_movie_id" translatable="false">id</string>

    <string name="movie_json_key_review_author" translatable="false">author</string>
    <string name="movie_json_key_review_content" translatable="false">content</string>

    <string name="movie_json_key_youtube_key" translatable="false">key</string>

    <!-- Settings Strings-->
    <!-- Name for Application Settings [CHAR LIMIT=30] -->
    <string name="title_activity_settings">Settings</string>

    <!-- Movie Sort Order Preferences [CHAR LIMIT=NONE]-->
    <string name="movie_sort_order_key" translatable="false">movie_sort_order_key</string>
    <string name="movie_sort_order_title" translatable="false">Movie Sort Order</string>

    <string name="delete_favourites_key" translatable="false">delete_favourite_table</string>
    <string name="delete_favourite_movies_title" translatable="false">Delete All Favourite Movies</string>

    <!-- the below string is not making it into a newly installed App url for movie query-->
    <string name="movie_sort_order_default_value" translatable="false">popular</string>
    <!--  Took out this value       @string/movie_query_popular      Put this back when done debugging-->

    <!-- Movie intent ket to pass information to detail Activity-->
    <string name="movie_details_intent_key" translatable="false">movie_details_intent_key</string>


    <!-- Detail View resources [CHAR LIMIT=30]-->
    <string name="detail_view_movie_title_label">Title</string>
    <string name="detail_view_user_rating_label">User Rating:</string>
    <string name="detail_view_user_rating_content_label">User Rating Content</string>
    <string name="detail_view_release_date_label">Release Date:</string>
    <string name="detail_view_release_date_content_label">Release Date content</string>
    <string name="detail_view_overview_label">Overview</string>
    <string name="detail_view_add_to_favourites_button">Add To Favourites</string>

    <!-- Detail Activity Fragment resources [CHAR LIMIT = 30]-->
    <string name="detail_fragment_trailer_title">Trailers</string>
    <string name="detail_fragment_reviews_title">Reviews</string>
    <string name="detail_fragment_trailer_button_1_text">Play Trailer #1</string>
    <string name="detail_fragment_trailer_button_2_text">Play Trailer #2</string>
    <string name="detail_fragment_trailer_button_3_text">Play Trailer #3</string>
    <string name="detail_fragment_review_author_title">"Author:    "</string>


    <!-- Grid View resources [CHAR LIMIT=30]-->
    <string name="grid_items_movies_layout_movie_name_under_poster">Movie name</string>
    <string name="thumbnail_of_movie_poster">Thumbnail of movie poster</string>


</resources>


