<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.lgelberger.popularmovies.DetailActivityFragment"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/linear_layout_wih_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_poster_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:adjustViewBounds="true"
                android:paddingBottom="16dp"
                android:paddingRight="16dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_view_movie_title_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_rating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/textview_title"
                    android:layout_below="@id/textview_title"
                    android:text="@string/detail_view_user_rating_label" />

                <TextView
                    android:id="@+id/textview_user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textview_release_date"
                    android:layout_alignTop="@id/user_rating_label"
                    android:text="@string/detail_view_user_rating_content_label" />

                <TextView
                    android:id="@+id/release_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/user_rating_label"
                    android:layout_below="@id/user_rating_label"
                    android:text="@string/detail_view_release_date_label" />

                <TextView
                    android:id="@+id/textview_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/release_date_label"
                    android:layout_toRightOf="@id/release_date_label"
                    android:text="@string/detail_view_release_date_content_label" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textview_plot_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_view_overview_label" />
    </LinearLayout>
</ScrollView>